<resources>
    <string name="app_name">Application</string>
    <string name="username">用户名</string>
    <string name="password">密码（长度6~16位）</string>
    <string name="sign_in">已有账户？马上登陆</string>
    <string name="sign_up">创建新用户</string>
    <string name="submit">提交信息</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_multi_select_list_preference_dialog_title">Multi Select List Preference</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_header_data_sync">高级设置</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_social_recommendations">原料剩余提示</string>
    <string name="pref_header_general">基本设置</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_add_friends_to_messages">接受好友消息</string>
    <string-array name="pref_example_list_titles">
        <item>总是</item>
        <item>可能</item>
        <item>从不</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_display_name">退出登录</string>
    <string name="pref_header_notifications">其他设置</string>

</resources>
