<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textColor="@color/blue500"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="200dp">

            <info.hoang8f.widget.FButton
                android:id="@+id/btn_signin"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <!--fbutton:buttonColor="@color/white"-->
            <!--fbutton:shadowEnabled="false"-->
            <!--fbutton:cornerRadius="20dp"-->

            <info.hoang8f.widget.FButton
                android:id="@+id/btn_signup"
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>