<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightblue200"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/blue600"
        android:textSize="40sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!--&lt;!&ndash; Name Label &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/translucent"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--&lt;!&ndash;  Email Label &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <EditText android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/translucent"
                android:hint="Email" />
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--&lt;!&ndash; Password Label &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <EditText android:id="@+id/et_userPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/translucent"
                android:hint="@string/password" />
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--&lt;!&ndash; Password Re-enter Label &ndash;&gt;-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="8dp">-->
            <EditText android:id="@+id/rePasswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/translucent"
                android:hint="请再输入一次密码"/>
        <!--</android.support.design.widget.TextInputLayout>-->


        <com.dd.CircularProgressButton
            android:id="@+id/cpb_submit"
            android:layout_width="196dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!--<MorphingButton-->
            <!--android:id="@+id/submit"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_gravity="center_horizontal"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="20sp"
                android:text="@string/sign_in"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>